rm deprecated options